--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <p>Git</p>
   <p>hello world</p>
   <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, minima!</div>
+  <section>
+
+    <h2>Section2</h2>
+  </section>
 </body>
 </html>
